; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_bdg.c_netmap_bdg_update_private_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_bdg.c_netmap_bdg_update_private_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nm_bridge = type { i8* }

@EINVAL = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @netmap_bdg_update_private_data(i8* %0, i8* (i8*, i8*, i32*)* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8* (i8*, i8*, i32*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.nm_bridge*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* (i8*, i8*, i32*)* %1, i8* (i8*, i8*, i32*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  store i8* null, i8** %9, align 8
  store i32 0, i32* %11, align 4
  %12 = call i32 (...) @NMG_LOCK()
  %13 = load i8*, i8** %5, align 8
  %14 = call %struct.nm_bridge* @nm_find_bridge(i8* %13, i32 0, i32* null)
  store %struct.nm_bridge* %14, %struct.nm_bridge** %10, align 8
  %15 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %16 = icmp ne %struct.nm_bridge* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %4
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %11, align 4
  br label %40

19:                                               ; preds = %4
  %20 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @nm_bdg_valid_auth_token(%struct.nm_bridge* %20, i8* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %19
  %25 = load i32, i32* @EACCES, align 4
  store i32 %25, i32* %11, align 4
  br label %40

26:                                               ; preds = %19
  %27 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %28 = call i32 @BDG_WLOCK(%struct.nm_bridge* %27)
  %29 = load i8* (i8*, i8*, i32*)*, i8* (i8*, i8*, i32*)** %6, align 8
  %30 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %31 = getelementptr inbounds %struct.nm_bridge, %struct.nm_bridge* %30, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = load i8*, i8** %7, align 8
  %34 = call i8* %29(i8* %32, i8* %33, i32* %11)
  store i8* %34, i8** %9, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %37 = getelementptr inbounds %struct.nm_bridge, %struct.nm_bridge* %36, i32 0, i32 0
  store i8* %35, i8** %37, align 8
  %38 = load %struct.nm_bridge*, %struct.nm_bridge** %10, align 8
  %39 = call i32 @BDG_WUNLOCK(%struct.nm_bridge* %38)
  br label %40

40:                                               ; preds = %26, %24, %17
  %41 = call i32 (...) @NMG_UNLOCK()
  %42 = load i32, i32* %11, align 4
  ret i32 %42
}

declare dso_local i32 @NMG_LOCK(...) #1

declare dso_local %struct.nm_bridge* @nm_find_bridge(i8*, i32, i32*) #1

declare dso_local i32 @nm_bdg_valid_auth_token(%struct.nm_bridge*, i8*) #1

declare dso_local i32 @BDG_WLOCK(%struct.nm_bridge*) #1

declare dso_local i32 @BDG_WUNLOCK(%struct.nm_bridge*) #1

declare dso_local i32 @NMG_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
